Write, read, adimin
