# src/controllers/copiesController.js
@@ -7,6 +7,10 @@ copiesController.getAllCopies = async (req, res) => {
     #swagger.summary = "Get all copies"
     #swagger.description = "Returns all copies in the database"
     #swagger.tags = ['Copies']
+    #swagger.security = [{
+        "OAuth2": ["read"]
+        }]
+
     */
     try {
         const copies = await Copies.find();
@@ -43,6 +47,9 @@ copiesController.addOrUpdateCopy = async (req, res) => {
     #swagger.summary = "Add or update a copy"
     #swagger.description = "Add or update a copy"
     #swagger.tags = ['Copies']
+    #swagger.security = [{
+        "OAuth2": ["write"]
+        }]
     */
     try {
         const { downloaded, physical, gameTitle, consoles } = req.body;
@@ -72,6 +79,9 @@ copiesController.deleteCopy = async (req, res) => {
     #swagger.summary = "Delete a copy"
     #swagger.description = "Delete a copy"
     #swagger.tags = ['Copies']
+    #swagger.security = [{
+        "OAuth2": ["admin"]
+        }]
     */
     try {
         const { gameTitle } = req.params;
